Attempt to fix Kontakt overflow problem

--- a/src/components/Contact_component/Contact_component.css
+++ b/src/components/Contact_component/Contact_component.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   min-height: 200px;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .textbox {
